# kissvpn

./: Cargo.toml
.github/workflows/: release.yml
src/: cipher.rs  constants.rs  engine.rs  faketcp.rs  lib.rs  main.rs  transport.rs  tun.rs
src/faketcp/: client.rs  raw_socket.rs  socket.rs  socket_fd_impl.rs  timer_runner.rs
src/transport/: fakedns.rs  faketcp.rs  udp.rs
