[package]
name = "kissvpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.80"
bytes = "1.6.0"
tun = { version = "0.6.1", features = ["async"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.21"
hkdf = "0.12.4"
chacha20poly1305 = { version = "0.10", features = ["alloc", "std"] }
sha2 = "0.10.8"
rand = "0.8.5"
aead = { version = "0.5.2", features = ["bytes"] }
static_assertions = "1.1.0"
